--- a/styles/modal.css
+++ b/styles/modal.css
@@ -19,30 +19,33 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 1rem;
-    background-color: red;
+    background-color: #000001;
 }
 
 header h2 {
     color: #fff;
+    font-size:36px;
 }
 
 .search {
     background-color: transparent;
-    border: 2px solid white;
-    border-radius: 50px;
+    border: 1px solid rgb(0, 0, 0);
+    background-color: white;
+    border-radius: 10px;
     font-family: inherit;
     font-size: 1rem;
     padding: 0.5rem;
-    color: white;
+    color: rgb(0, 0, 0);
+    outline: none;
     text-align: center;
 }
 
 .search::placeholder {
-    color: white;
+    color: rgb(0, 0, 0);
 }
 
 .search:hover {
-    background-color: lightslategray;
+    cursor: pointer;
 }
 
 /* MAIN */
@@ -67,7 +70,7 @@ header h2 {
     width: 95%;
     margin: auto;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat( auto-fit, minmax(350px, 1fr) );
     text-align: center;
 }
 
@@ -80,11 +83,12 @@ header h2 {
 }
 
 .items-cards {
-    border-radius: 10px;
+    border-radius: 3px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
     width: 100%;
     height: 90%;
     text-align: center;
-    background-color: #252525;
+    background-color: #ffffff;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -109,7 +113,7 @@ header h2 {
 a {
     position: relative;
     top: -7%;
-    color: white;
+    color: black;
 }
 
 /* MODAL */
@@ -117,7 +121,7 @@ a {
 
 
 .modal-contenido {
-    background-color: rgb(44, 44, 44);
+    background-color: rgb(246, 246, 246);
     width: 40%;
     padding: 10px 20px;
     margin: auto;
