--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,48 @@ body{
     background:rgb(238, 238, 238)
 }
 
+/* HEADER */
+/* HEADER */
+#cabecera {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+    background-color: #000001;
+}
+
+header h2 {
+    color: #fff;
+    font-size:36px;
+}
+
+.search {
+    background-color: transparent;
+    border: 1px solid rgb(0, 0, 0);
+    background-color: white;
+    border-radius: 10px;
+    font-family: inherit;
+    font-size: 1rem;
+    padding: 0.5rem;
+    color: rgb(0, 0, 0);
+    outline: none;
+    text-align: center;
+}
+
+.search::placeholder {
+    color: rgb(0, 0, 0);
+}
+
+.search:hover {
+    cursor: pointer;
+}
+
+#principal {
+    width: 98%;
+    margin: auto;
+}
+
+
 .carruselPrincipal{
     display: block;
     width: 90vw;
