--- a/styles/carrito.css
+++ b/styles/carrito.css
@@ -11,6 +11,7 @@
 body {
     width: 98.79vw;
     max-width: 100vw;
+    height: 100vh;
 }
 
 /* HEADER */
@@ -65,3 +66,109 @@ header h2 {
     align-items: center;
     padding: 5px;
 }
+
+#boton-pagar{
+    position: relative;
+    left: 86%;
+    
+}
+
+
+/* MODAL */
+
+.modal-contenido {
+    background-color: rgb(246, 246, 246);
+    width: 40%;
+    height: 100vh;
+    padding: 10px 20px;
+    margin: auto;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.modal-contenido {
+    background-color: rgb(246, 246, 246);
+    width: 40%;
+    padding: 10px 20px;
+    margin: auto;
+    position: relative;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.contenido-cuerpo {
+    display: flex;
+    flex-direction: column
+}
+
+
+
+#miModal {
+    background-color: rgba(0, 0, 0, .8);
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    opacity: 0;
+    pointer-events: none;
+    transition: all 1s;
+}
+
+#miModal .boton-cerrar {
+    font-size: 20px;
+    padding: 8px 5px;
+    left: 40%;
+    top: -1px;
+    border-radius: 100%;
+
+}
+
+
+#miModal:target {
+    opacity: 1;
+    pointer-events: auto;
+} 
+
+.container{
+    width: 100%;
+    margin: auto;
+    text-align: center;
+    margin-top: 20%;
+}
+
+form{
+    width: 100%;
+    height: 100%;
+    margin:auto;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid black;
+    padding: 20px;
+}
+
+input{
+    padding: 15px;
+    margin-top: 10px;
+    margin-bottom: 8px;
+}
+.infoTarjet{
+    width: 100%;
+    display: flex;
+}
+
+.infoTarjet #fVenc{
+    width: 60%
+}
+.infoTarjet #CVV{
+    width: 40%
+}
+
+
+form>button{
+    width:50%;
+    padding: 10px;
+    margin: auto;
+}
+
+
