--- a/styles/carrito.css
+++ b/styles/carrito.css
@@ -56,7 +56,7 @@ header h2 {
 }
 
 .barra {
-    background-color: blue;
+    background-color: whitesmoke;
 }
 
 .items-barra {
@@ -104,7 +104,7 @@ header h2 {
 
 
 #miModal {
-    background-color: rgba(0, 0, 0, .8);
+    background-color: rgba(0, 0, 0, 0.97);
     position: fixed;
     top: 0;
     right: 0;
@@ -121,6 +121,7 @@ header h2 {
     left: 40%;
     top: -1px;
     border-radius: 100%;
+    list-style: none;text-decoration: none;
 
 }
 
