--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,18 @@
-body{
-    background:rgb(238, 238, 238)
+* {
+    padding: 0;
+    top: 0;
+    left: 0;
+    margin: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+    list-style: none;
 }
 
-/* HEADER */
+body {
+    width: 98.79vw;
+    max-width: 100vw;
+}
+
 /* HEADER */
 #cabecera {
     display: flex;
@@ -41,6 +51,24 @@ header h2 {
 #principal {
     width: 98%;
     margin: auto;
+}
+
+/* MAIN */
+#principal {
+    width: 98%;
+    margin: auto;
+}
+
+.barra {
+    background-color: whitesmoke;
+}
+
+.items-barra {
+    display: flex;
+    margin-left: 50%;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px;
 }
 
 
